; ModuleID = '/home/carl/AnghaBench/libgit2/tests/repo/extr_discover.c_test_repo_discover__discovering_repo_with_subdirectory_succeeds.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/repo/extr_discover.c_test_repo_discover__discovering_repo_with_subdirectory_succeeds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@SUB_REPOSITORY_FOLDER_SUB = common dso_local global i32 0, align 4
@ceiling_dirs = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@SUB_REPOSITORY_GITDIR = common dso_local global i32 0, align 4
@SUB_REPOSITORY_FOLDER_SUB_SUB = common dso_local global i32 0, align 4
@SUB_REPOSITORY_FOLDER_SUB_SUB_SUB = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_repo_discover__discovering_repo_with_subdirectory_succeeds() #0 {
  %1 = load i32, i32* @SUB_REPOSITORY_FOLDER_SUB, align 4
  %2 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ceiling_dirs, i32 0, i32 0), align 4
  %3 = load i32, i32* @SUB_REPOSITORY_GITDIR, align 4
  %4 = call i32 @ensure_repository_discover(i32 %1, i32 %2, i32 %3)
  %5 = load i32, i32* @SUB_REPOSITORY_FOLDER_SUB_SUB, align 4
  %6 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ceiling_dirs, i32 0, i32 0), align 4
  %7 = load i32, i32* @SUB_REPOSITORY_GITDIR, align 4
  %8 = call i32 @ensure_repository_discover(i32 %5, i32 %6, i32 %7)
  %9 = load i32, i32* @SUB_REPOSITORY_FOLDER_SUB_SUB_SUB, align 4
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ceiling_dirs, i32 0, i32 0), align 4
  %11 = load i32, i32* @SUB_REPOSITORY_GITDIR, align 4
  %12 = call i32 @ensure_repository_discover(i32 %9, i32 %10, i32 %11)
  ret void
}

declare dso_local i32 @ensure_repository_discover(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
